test/types/type_variables/deitz/part1/test_clone_class1b.good
test_clone_class1b.chpl:12: error: Cannot assign to int(64) from real(64)
