test/types/type_variables/deitz/part1/test_clone_class1b.chpl
class foo {
  var x;
  proc print() {
    writeln(x);
  }
}

var f = new borrowed foo(2);

f.print();

f.x = 3.2;

f.print();
